Add SME News awards

--- a/ways-to-speed-up-your-windows-pc.html
+++ b/ways-to-speed-up-your-windows-pc.html
@@ -240,8 +240,8 @@ permalink: /ways-to-speed-up-your-windows-pc/
         <div class="footer section">
             <div class="container-1140">
                 <div class="row">
-                    <div class="col-3">
-                        <h4>Links</h4>
+                    <div class="col-2-4">
+                        <p><strong>Links</strong></p>
                         <p><a href="https://sybiltec.com/about/">About</a></p>
                         <p><a href="https://sybiltec.com/blog/">Blog</a></p>
                         <p><a href="https://sybiltec.com/faqs/">FAQs</a></p>
@@ -249,8 +249,8 @@ permalink: /ways-to-speed-up-your-windows-pc/
                         <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
                     </div>
-                    <div class="col-3">
-                        <h4>Services</h4>
+                    <div class="col-2-4">
+                        <p><strong>Services</strong></p>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
@@ -258,37 +258,42 @@ permalink: /ways-to-speed-up-your-windows-pc/
                         <p><a href="https://sybiltec.com/training/">Workshops</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
-                    <div class="col-3">
-                        <h4>Some of the Areas We Cover</h4>
+                    <div class="col-2-4">
+                        <p><strong>Some Areas We Cover</strong></p>
                         <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
                         <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
                         <p><a href="https://sybiltec.com/free-workshops-greenwich-borough/">Workshops in Greenwich</a></p>
                     </div>
-                    <div class="col-3">
-                        <h4>Get in Touch</h4>
+                    <div class="col-2-4">
+                        <p><strong>Get in Touch</strong></p>
                             <p><a href="mailto:info@sybiltec.com?subject=Website Enquiry">info@sybiltec.com</a><br>
                                 The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
-                            <p>
-                                <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
-                                    <i class="fa-brands fa-linkedin"></i></a>
-                                <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
-                                    <i class="fa-brands fa-instagram"></i></a>
-                                <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
-                                    <i class="fa-brands fa-pinterest"></i></a>
-    			                <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                    <i class="fa-brands fa-facebook"></i></a>
-                                <a href="https://x.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                    <i class="fa-brands fa-x-twitter"></i></a>
-                                <a href="https://www.tiktok.com/@sybiltec" target="_blank" rel="noopener noreferrer">
-                                    <i class="fa-brands fa-tiktok"></i></a>
-                            </p>
                         <p>
                             <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
                         </p>      
                     </div>
+                    <div class="col-2-4">
+                        <p><strong>Awards</strong></p>
+                        <img src="https://sybiltec.com/images/awards/best-sme-focused-web-design-agency-2024.png" alt="SME News Best SME-Focused Web Design Agency 2024">
+                        <img src="https://sybiltec.com/images/awards/digital-services-customer-service-excellence-award-2024.png" alt="SME News Digital Services Customer Service Excellence Award 2024">
+                    </div>
                 </div>
             </div>
-        <div class="copyright section center"><p>Copyright &copy;           
+            <div class="container-1140 center padding-top padding-bottom">
+                <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-pinterest"></i></a>
+                <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-facebook"></i></a>
+                <a href="https://x.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.tiktok.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-tiktok"></i></a>
+            </div>
+            <div class="copyright section center"><p>Copyright &copy;           
                 <span id="year"></span> Sybiltec Web Design</p>
             </div>
         </div>
