--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -165,12 +165,12 @@ permalink: /privacy-notice/
                         Privacy Notice
                     </li>
                 </ol>
-                <p>Last updated: 5 May 2024</p>
+                <p>Last updated: 7 September 2024</p>
                 <h2>Our contact details</h2>
                 <p>Name: Sybiltec Web Design</p>
                 <p>Email: <a href="mailto:privacy@sybiltec.com" target="_blank">privacy@sybiltec.com</a></p>
                 <p>Address: The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
-                <h2>The types of personal information we collect</h2>
+                <h2>The type of personal information we collect</h2>
                 <p>We may collect, use, store or transfer different kinds of personal data about you when you use our website or when you receive services or communication from us.</p>
 
                 <p>We have categorised the different kinds of personal data as follows:</p>
@@ -262,7 +262,7 @@ permalink: /privacy-notice/
 
                 <p><strong>Helpline number:</strong> <a href="tel:03031231113">0303 123 1113</a></p>
 
-                <p><strong>Website:</strong> <a href="https://ico.org.uk/" target="_blank" rel="noreferrer noopener">https://ico.org.uk/</a></p> 
+                <p><strong>Website:</strong> <a href="https://ico.org.uk/" target="_blank" rel="noreferrer noopener">ico.org.uk</a></p> 
 
                 <p>&copy; 2024 GRC Information Management</p>
 
