Add three case studies

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sybiltec: Award-Winning Web Design in London, Surrey and Kent</title>       
+        <title>Sybiltec: Award-Winning Web Design | London, Surrey and Kent</title>       
         <meta name="Description" content="Designing websites that make an impact. We support small businesses in London, Surrey, Kent, all across the UK and beyond. Start your project today.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Sybiltec: Award-Winning Web Design in London, Surrey and Kent" />
+        <meta property="og:title" content="Sybiltec: Award-Winning Web Design | London, Surrey and Kent" />
         <meta property="og:description" content="Designing websites that make an impact. We support small businesses in London, Surrey, Kent, all across the UK and beyond. Start your project today." />
         <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
