--- a/sitemap.html
+++ b/sitemap.html
@@ -190,6 +190,12 @@ permalink: /sitemap/
                     <li><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></li>
                     <li><a href="https://sybiltec.com/website-review/">Website Review</a></li>
                 </ul>
+                <h2>Case Studies</h2>
+                <ul>
+                    <li><a href="https://sybiltec.com/bexley-linkup/">Bexley Linkup</a></li>
+                    <li><a href="https://sybiltec.com/cnt-associates/">CNT Associates</a></li>
+                    <li><a href="https://sybiltec.com/jenup/">JenUp</a></li>
+                </ul>
                 <h2>Blog Posts</h2>
                 <ul>
                     <li><a href="https://sybiltec.com/5-best-tools-for-remote-working/">5 Best Tools for Remote Working</a></li>
