Change Clients to Case Studies

--- a/leaflet-design.html
+++ b/leaflet-design.html
@@ -137,7 +137,7 @@ permalink: /leaflet-design/
                                         <a href="/">Home</a>
                                         <a href="https://sybiltec.com/about/">About</a>
                                         <a href="https://sybiltec.com/services/">Services</a>
-                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
