--- a/sitemap.html
+++ b/sitemap.html
@@ -137,7 +137,7 @@ permalink: /sitemap/
                                         <a href="/">Home</a>
                                         <a href="https://sybiltec.com/about/">About</a>
                                         <a href="https://sybiltec.com/services/">Services</a>
-                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
@@ -170,7 +170,7 @@ permalink: /sitemap/
                     <li><a href="https://sybiltec.com/blog/">Blog Page 1</a></li>
                     <li><a href="https://sybiltec.com/blog-2/">Blog Page 2</a></li>
                     <li><a href="https://sybiltec.com/blog-3/">Blog Page 3</a></li>
-                    <li><a href="https://sybiltec.com/clients/">Clients</a></li>
+                    <li><a href="https://sybiltec.com/clients/">Case Studies</a></li>
                     <li><a href="https://sybiltec.com/contact/">Contact</a></li>
                     <li><a href="https://sybiltec.com/faqs/">FAQs</a></li>
                     <li><a href="https://sybiltec.com/">Home</a></li>
