--- a/are-you-inadvertently-abusing-your-customers-data.html
+++ b/are-you-inadvertently-abusing-your-customers-data.html
@@ -160,7 +160,7 @@ permalink: /are-you-inadvertently-abusing-your-customers-data/
                                         <a href="/">Home</a>
                                         <a href="https://sybiltec.com/about/">About</a>
                                         <a href="https://sybiltec.com/services/">Services</a>
-                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
