--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -161,7 +161,7 @@ permalink: /backup-wordpress-website-using-updraftplus/
                                         <a href="/">Home</a>
                                         <a href="https://sybiltec.com/about/">About</a>
                                         <a href="https://sybiltec.com/services/">Services</a>
-                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
