--- a/web-design-process-explained-12-easy-steps.html
+++ b/web-design-process-explained-12-easy-steps.html
@@ -159,7 +159,7 @@ permalink: /web-design-process-explained-12-easy-steps/
                                         <a href="/">Home</a>
                                         <a href="https://sybiltec.com/about/">About</a>
                                         <a href="https://sybiltec.com/services/">Services</a>
-                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
