Add ICO registration reference

--- a/are-you-inadvertently-abusing-your-customers-data.html
+++ b/are-you-inadvertently-abusing-your-customers-data.html
@@ -299,7 +299,7 @@ permalink: /are-you-inadvertently-abusing-your-customers-data/
                     <i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec Web Design</p>
+                <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
             </div>
         </div>
         <script>
