--- a/faqs.html
+++ b/faqs.html
@@ -455,7 +455,7 @@ permalink: /faqs/
                     <i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec Web Design</p>
+                <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
             </div>
         </div>
         <script>
