--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -358,7 +358,7 @@ permalink: /6-reasons-to-use-shopify/
                     <i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec Web Design</p>
+                <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
             </div>
         </div>
         <script>
