--- a/accessible-website-design.html
+++ b/accessible-website-design.html
@@ -327,7 +327,7 @@ permalink: /accessible-website-design/
                     <i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec Web Design</p>
+                <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
             </div>
         </div>
         <script>
