--- a/common-website-mistakes.html
+++ b/common-website-mistakes.html
@@ -320,7 +320,7 @@ permalink: /common-website-mistakes/
                     <i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec Web Design</p>
+                <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
             </div>
         </div>
         <script>
