--- a/improve-website-seo.html
+++ b/improve-website-seo.html
@@ -434,7 +434,7 @@ permalink: /improve-website-seo/
                     <i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec Web Design</p>
+                <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
             </div>
         </div>
         <script>
