--- a/install-ga4-wix-website.html
+++ b/install-ga4-wix-website.html
@@ -290,7 +290,7 @@ permalink: /install-ga4-wix-website/
                     <i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec Web Design</p>
+                <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
             </div>
         </div>
         <script>
