--- a/strategies-for-business-success.html
+++ b/strategies-for-business-success.html
@@ -280,7 +280,7 @@ permalink: /strategies-for-business-success/
             <i class="fa-brands fa-tiktok"></i></a>
     </div>
     <div class="copyright section center"><p>Copyright &copy;           
-        <span id="year"></span> Sybiltec Web Design</p>
+        <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
     </div>
 </div>
 <script>
