--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -335,7 +335,7 @@ permalink: /upgrade-google-analytics-4/
                     <i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec Web Design</p>
+                <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
             </div>
         </div>
         <script>
