--- a/ways-to-speed-up-your-windows-pc.html
+++ b/ways-to-speed-up-your-windows-pc.html
@@ -294,7 +294,7 @@ permalink: /ways-to-speed-up-your-windows-pc/
                     <i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec Web Design</p>
+                <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
             </div>
         </div>
         <script>
