--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@
             <p class="center">We have worked with businesses from a wide variety of industry sectors, including consultancies, wellbeing organisations, creatives, charities and fashion brands. See some examples of our best work below.</p>
             <div class="padding-top center">
                 <div class="row">
-                    <div class="col-3"><img src="images/clients/bexley-linkup.png" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
-                    <div class="col-3"><img src="images/clients/emrys.png" alt="Emrys Technology & Consultancy"><p class="customer">Emrys Technology & Consultancy</p></div>
-                    <div class="col-3"><img src="images/clients/fortis-dpc.png" alt="Fortis DPC (Data Protection Compliance)"><p class="customer">Fortis DPC</p></div>
-                    <div class="col-3"><img src="images/clients/happily-clappily-ever-laughter.png" alt="Happily Clappily Ever Laughter"><p class="customer">Happily Clappily Ever Laughter</p></div>
+                    <div class="col-3"><img src="images/clients/bexley-linkup.webp" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
+                    <div class="col-3"><img src="images/clients/emrys.webp" alt="Emrys Technology & Consultancy"><p class="customer">Emrys Technology & Consultancy</p></div>
+                    <div class="col-3"><img src="images/clients/fortis-dpc.webp" alt="Fortis DPC (Data Protection Compliance)"><p class="customer">Fortis DPC</p></div>
+                    <div class="col-3"><img src="images/clients/happily-clappily-ever-laughter.webp" alt="Happily Clappily Ever Laughter"><p class="customer">Happily Clappily Ever Laughter</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-3"><img src="images/clients/lcg-lift-consultancy.png" alt="LCG Lift Consultancy"><p class="customer">LCG Lift Consultancy</p></div>
-                    <div class="col-3"><img src="images/clients/nerowireart.png" alt="NeroWireArt"><p class="customer">NeroWireArt</p></div>
-                    <div class="col-3"><img src="images/clients/new-haw-community-centre.png" alt="New Haw Community Centre"><p class="customer">New Haw Community Centre</p></div>
-                    <div class="col-3"><img src="images/clients/techwomen4boards.png" alt="TechWomen4Boards"><p class="customer">TechWomen4Boards</p></div>
+                    <div class="col-3"><img src="images/clients/lcg-lift-consultancy.webp" alt="LCG Lift Consultancy"><p class="customer">LCG Lift Consultancy</p></div>
+                    <div class="col-3"><img src="images/clients/nerowireart.webp" alt="NeroWireArt"><p class="customer">NeroWireArt</p></div>
+                    <div class="col-3"><img src="images/clients/new-haw-community-centre.webp" alt="New Haw Community Centre"><p class="customer">New Haw Community Centre</p></div>
+                    <div class="col-3"><img src="images/clients/techwomen4boards.webp" alt="TechWomen4Boards"><p class="customer">TechWomen4Boards</p></div>
                 </div>
             </div>
             <div class="center padding-bottom padding-top"><a class="btn-secondary padding-top" href="https://sybiltec.com/clients/">See All Clients >></a></div>
@@ -216,7 +216,7 @@
                         <p><strong><em>Sybil Mayard</em></strong></p>
                     </div>
                     <div class="col-6 center">
-                        <img src="images/sybil-mayard.jpeg" alt="Sybil Mayard">
+                        <img src="images/sybil-mayard.webp" alt="Sybil Mayard">
                     </div>
                 </div>
             </div>
