--- a/sitemap.html
+++ b/sitemap.html
@@ -194,6 +194,7 @@ permalink: /sitemap/
                 <ul>
                     <li><a href="https://sybiltec.com/bexley-linkup/">Bexley Linkup</a></li>
                     <li><a href="https://sybiltec.com/cnt-associates/">CNT Associates</a></li>
+                    <li><a href="https://sybiltec.com/fortis-dpc/">Fortis DPC</a></li>
                     <li><a href="https://sybiltec.com/jenup/">JenUp</a></li>
                 </ul>
                 <h2>Blog Posts</h2>
