Update Fortis DPC case study

--- a/fortis-dpc.html
+++ b/fortis-dpc.html
@@ -173,15 +173,19 @@ permalink: /fortis-dpc/
                 </ul>
                 <h2>Delivering Peace of Mind</h2>
                 <p>Fortis DPC are your experts in data protection compliance, GDPR, ISO and cyber security solutions. Based in Downside, Surrey, they offer services to schools, churches, charities and businesses of all sizes.</p>
-                <p>The client's biggest complaint with their previous website was the excessive use of blue on the website, creating a cold and corporate feel which did not accurately reflect the company's values. They wanted the website to be "simple, navigable and to instil confidence." Finally, the new website's design needed to represent the company's name, <em>Fortis</em>, which is the Latin word for 'strong'.</p>
+                <p>The client's biggest complaint with their previous website was the excessive use of blue, creating a cold and corporate feel which did not accurately reflect the company's values. They wanted the website to be "simple, navigable and to instil confidence." Finally, the new website's design needed to represent the company's name, <em>Fortis</em>, which is the Latin word for 'strong'.</p>
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/fortis-dpc.com_homepage.png" alt="Fortis DPC old homepage">
                 <h2>A New Identity</h2>
                 <p>With the above requirements in mind, we kept the two original shades of blue (#009ee2 and #004B88), but made the darker blue the primary colour. This, paired with the large, bold fonts (Oswald and Blinker), created a more impactful and sophisticated overall look and feel.</p>
                 <p>We then introduced the Venetian Red (#db190c) as the accent colour. Used in just the right proportions, it creates the perfect balance and also serves as a warning that we must be vigilant at all times. The result is a design which is bold, dynamic and upholds the company's values of strength, security and trust.</p>
                 <h2>Subtle But Significant Differences</h2>
                 <p>In line with the new design of the overall website, we applied the Venetian Red to the checkbox's outline in the company logo and parts of the icons to accentuate specific elements. Here, you can see the original and new logo, and examples of the icons we improved:</p>
+                <img class="case-study-screenshot" src="images/logos/low-res/fortis-logo-before-after.png" alt="Fortis DPC logo - before and after">
+                <br>
+                <img class="case-study-screenshot" src="images/logos/low-res/fortis-icons-before-after.png" alt="Fortis audit, gap analysis icons - before and after">
                 <h2>Accessibility Improvements</h2>
                 <p>As part of our analysis of the original website, we found some elements of the design to be non-compliant with accessibility requirements, particularly the main paragraph text - the text was too small and the contrast ratio too low. This was remedied simply by increasing the size of the text to 16px and changing the text colour from light grey (#808080) to black.</p>
+                <img class="case-study-screenshot" src="images/clients/fortis-cyber-security-before-after.png" alt="Fortis cyber security - before and after">
                 <h2>Homepage Redesign</h2>
                 <p>We created an entirely new design for the homepage, reducing the amount of text and incorporating more imagery for a visually appealing experience.</p>
                 <p>We began with adding a bold image for the hero section to represent cyber security services. We rewrote the headline and subheadline, strategically including the relevant keywords.</p>
