Update case study links

--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -210,8 +210,7 @@ permalink: /small-business-web-design/
                                 <li>Google Analytics setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://fortis-dpc.com/"
-                                target="_blank" rel="noopener noreferrer">Fortis DPC >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/fortis-dpc/">Fortis DPC >></a>
                             </div>
                         </div>
                     </div>
@@ -252,8 +251,7 @@ permalink: /small-business-web-design/
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://bexleylinkup.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">Bexley Linkup >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/bexley-linkup/">Bexley Linkup >></a>
                             </div>
                         </div>
                     </div>
