--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -209,8 +209,7 @@ permalink: /web-design-surrey/
                                 <li>Google Analytics setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://fortis-dpc.com/"
-                                target="_blank" rel="noopener noreferrer">Fortis DPC >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/fortis-dpc/">Fortis DPC >></a>
                             </div>
                         </div>
                     </div>
