--- a/website-design.html
+++ b/website-design.html
@@ -248,8 +248,7 @@ permalink: /website-design/
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://bexleylinkup.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">Bexley Linkup >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/bexley-linkup/">Bexley Linkup >></a>
                             </div>
                         </div>
                     </div>
@@ -351,8 +350,7 @@ permalink: /website-design/
                                 <li>Website review</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://www.cntassociates.com/"
-                                target="_blank" rel="noopener noreferrer">CNT Associates >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/cnt-associates/">CNT Associates >></a>
                             </div>
                         </div>
                     </div>
