Add CC case study

--- a/clients.html
+++ b/clients.html
@@ -278,9 +278,9 @@ permalink: /clients/
                     <div class="col-4">
                         <h3>New Haw Community Centre</h3>
                         <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">
-                        <!-- <div class="padding-btn">
+                        <div class="padding-btn">
                             <a class="btn-secondary" href="https://sybiltec.com/new-haw-community-centre/">View New Haw Community Centre &gt;&gt;</a>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
 
