--- a/new-haw-community-centre.html
+++ b/new-haw-community-centre.html
@@ -1,5 +1,5 @@
 ---
-permalink: /sitemap/
+permalink: /new-haw-community-centre/
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -25,20 +25,19 @@ permalink: /sitemap/
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "Sitemap"
+                "name": "New Haw Community Centre"
               }]
             }
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sitemap | Sybiltec Web Design</title>       
-        <meta name="Description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website.">
-        <meta name="robots" content="all">
+        <title>New Haw Community Centre | Case Study | Sybiltec Web Design</title>       
+        <meta name="Description" content="New Haw Community Centre's new website enjoys a fresh, modern design and a streamlined booking system, thanks to Sybiltec's website redesign service.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Sitemap | Sybiltec Web Design" />
-        <meta property="og:description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website." />
-        <meta property="og:url" content="https://sybiltec.com/sitemap/" />
+        <meta property="og:title" content="New Haw Community Centre | Case Study | Sybiltec Web Design" />
+        <meta property="og:description" content="New Haw Community Centre's new website enjoys a fresh, modern design and a streamlined booking system, thanks to Sybiltec's website redesign service." />
+        <meta property="og:url" content="https://sybiltec.com/new-haw-community-centre/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -113,7 +112,7 @@ permalink: /sitemap/
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/sitemap/" />
+        <link rel="canonical" href="https://sybiltec.com/new-haw-community-centre/" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
@@ -150,7 +149,7 @@ permalink: /sitemap/
         </div>
         <div class="hero">
             <div class="container-1140">
-                <h1>Sitemap</h1>
+                <h1>New Haw Community Centre</h1>
             </div>
         </div>
         <div class="main section">
@@ -161,73 +160,40 @@ permalink: /sitemap/
                     </li>
                     >
                     <li>
-                        Sitemap
+                        New Haw Community Centre
                     </li>
                 </ol>
-                <h2>Main</h2>
+                <img class="case-study-screenshot" src="images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">
+                <h2>Services Delivered</h2>
                 <ul>
-                    <li><a href="https://sybiltec.com/about/">About</a></li>
-                    <li><a href="https://sybiltec.com/blog/">Blog Page 1</a></li>
-                    <li><a href="https://sybiltec.com/blog-2/">Blog Page 2</a></li>
-                    <li><a href="https://sybiltec.com/blog-3/">Blog Page 3</a></li>
-                    <li><a href="https://sybiltec.com/clients/">Case Studies</a></li>
-                    <li><a href="https://sybiltec.com/contact/">Contact</a></li>
-                    <li><a href="https://sybiltec.com/faqs/">FAQs</a></li>
-                    <li><a href="https://sybiltec.com/">Home</a></li>
-                    <li><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></li>
-                    <li><a href="https://sybiltec.com/projects/">Projects</a></li>
-                    <li><a href="https://sybiltec.com/services/">Services</a></li>
-                    <li><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></li>
+                    <li>Website redesign</li>
+                    <li>LemonBooking integration</li>
+                    <li>Google Analytics setup</li>
+                    <li>Google Search Console submission</li>
                 </ul>
-                <h2>Services</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></li>
-                    <li><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></li>
-                    <li><a href="https://sybiltec.com/training/">Workshops</a></li>
-                    <li><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></li>
-                    <li><a href="https://sybiltec.com/website-design/">Web Design Bexley</a></li>
-                    <li><a href="https://sybiltec.com/web-design-surrey/">Web Design Surrey</a></li>
-                    <li><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></li>
-                    <li><a href="https://sybiltec.com/website-review/">Website Review</a></li>
-                </ul>
-                <h2>Case Studies</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/bexley-linkup/">Bexley Linkup</a></li>
-                    <li><a href="https://sybiltec.com/cnt-associates/">CNT Associates</a></li>
-                    <li><a href="https://sybiltec.com/fortis-dpc/">Fortis DPC</a></li>
-                    <li><a href="https://sybiltec.com/jenup/">JenUp</a></li>
-                    <li><a href="https://sybiltec.com/new-haw-community-centre/">New Haw Community Centre</a></li>
-                </ul>
-                <h2>Blog Posts</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/5-best-tools-for-remote-working/">5 Best Tools for Remote Working</a></li>
-                    <li><a href="https://sybiltec.com/6-reasons-to-use-shopify/">7 Reasons Why You Should be Using Shopify</a></li>
-                    <li><a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">8 Ways to Speed Up Your Windows PC</a></li>
-                    <li><a href="https://sybiltec.com/user-experience-ux/">9 Ways to Improve the UX (User Experience) of Your Website</a></li>
-                    <li><a href="https://sybiltec.com/best-free-wordpress-plugins/">10 Best Free WordPress Plugins</a></li>
-                    <li><a href="https://sybiltec.com/common-website-mistakes/">10 Common Website Mistakes and How to Avoid Them</a></li>
-                    <li><a href="https://sybiltec.com/fix-slow-wordpress-website/">10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</a></li>
-                    <li><a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/accessible-website-design/">Accessible Design: Creating an Inclusive Website</a></li>
-                    <li><a href="https://sybiltec.com/website-compliance-quick-guide/">A Quick Guide to Website Compliance</a></li>
-                    <li><a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Are You Inadvertently Abusing Your Customers' Data?</a></li>
-                    <li><a href="https://sybiltec.com/cyber-security-best-practices-for-business/">Cyber Security Best Practices for You and Your Business</a></li>
-                    <li><a href="https://sybiltec.com/free-workshops-greenwich-borough/">Free Workshops for Greenwich Borough</a></li>
-                    <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">How Does a Good Website Showcase Trust?</a></li>
-                    <li><a href="https://sybiltec.com/upgrade-google-analytics-4/">How Do I Upgrade to Google Analytics 4?</a></li>
-                    <li><a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">How to Backup Your WordPress Website with UpdraftPlus</a></li>
-                    <li><a href="https://sybiltec.com/how-to-choose-web-designer/">How to Choose a Web Designer</a></li>
-                    <li><a href="https://sybiltec.com/improve-website-seo/">How to Improve the SEO of Your Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-shopify-website/">How to Install GA4 on Your Shopify Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wix-website/">How to Install GA4 on Your Wix Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wordpress-website/">How to Install GA4 on Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/google-search-console/">How to Use Google Search Console: a Quick Guide</a></li>
-                    <li><a href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Remote Working: How to Survive with 6 Tips</a></li>
-                    <li><a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What Are the Differences?</a></li>
-                    <li><a href="https://sybiltec.com/importance-of-contact-information-on-your-website/">The Importance of Contact Information on Your Website</a></li>
-                    <li><a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a></li>   
-                    <li><a href="https://sybiltec.com/strategies-for-business-success/">Thriving Through Change: Smart Website Strategies for Small Business Success</a></li>
-                </ul>
+                <h2>At the Centre of Our Community</h2>
+                <p>The New Haw Community Centre is located in New Haw, Surrey. The previous website suffered from an outdated design and a nonfunctional booking system.</p>
+                <h2>The Solution</h2>
+                <p>Sybiltec worked with the Community Centre to create a new design for the website. Using the logo as the basis for the colour palette, we used the red of the "New Haw Community Centre" text as the primary colour and the font (Harabara) for the headings. For the body text, we chose a sans-serif font (Mulish), for its ease of readability.</p>
+                <p>The homepage was completely redesigned, placing a large, colourful image in the background of the hero section. We ensured to include the most important sections on the homepage which were not previously present, i.e. the two halls, Why Choose Us, image gallery, additional facilities and testimonials.</p>
+                <div class="row">
+                    <div class="col-6">
+                        <p><strong><em>Before</em></strong></p>
+                        <img class="case-study-screenshot" src="images/clients/https___newhawcommunitycentre.co.uk_.png" alt="New Haw Community Centre homepage - before">
+                    </div>
+                    <div class="col-6">
+                        <p><strong><em>After</em></strong></p>
+                        <img class="case-study-screenshot" src="images/clients/newhawcommunitycentre.co.uk_.png" alt="New Haw Community Centre homepage - after">
+                    </div>
+                </div>
+                <h2>An Easier Way to Book Facilities</h2>
+                <p>To fix the booking system, we set up the LemonBooking app and connected the Book Now button to it, so users can now easily find an available date and time to book the required facilities without having to send emails back and forth to the Bookings team.</p>
+                <img class="case-study-screenshot" src="images/clients/new-haw.lemonbooking.com_embed-url_calendar.png" alt="LemonBooking embedded calendar">
+                <h2>The Result</h2>
+                <p>The Community Centre now enjoys a website with a fresh, modern design and a user-friendly booking system.</p>
+                <div class="padding-btn">
+                    <a class="btn-secondary" href="https://newhawcommunitycentre.co.uk/" target="_blank" rel="noopener noreferrer">View New Haw Community Centre &gt;&gt;</a>
+                </div>
             </div>
         </div>
         <div class="contact section">
