--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -270,8 +270,7 @@ permalink: /small-business-web-design/
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
-                                target="_blank" rel="noopener noreferrer">New Haw Community Centre >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/new-haw-community-centre/">New Haw Community Centre >></a>
                             </div>
                         </div>
                     </div>
