--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -231,8 +231,7 @@ permalink: /web-design-surrey/
                                 <li>Google Analytics setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
-                                target="_blank" rel="noopener noreferrer">New Haw Community Centre >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/new-haw-community-centre/">New Haw Community Centre >></a>
                             </div>
                         </div>
                     </div>
