Update CC case study

--- a/new-haw-community-centre.html
+++ b/new-haw-community-centre.html
@@ -163,7 +163,7 @@ permalink: /new-haw-community-centre/
                         New Haw Community Centre
                     </li>
                 </ol>
-                <img class="case-study-screenshot" src="images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">
+                <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">
                 <h2>Services Delivered</h2>
                 <ul>
                     <li>Website redesign</li>
@@ -179,16 +179,16 @@ permalink: /new-haw-community-centre/
                 <div class="row">
                     <div class="col-6">
                         <p><strong><em>Before</em></strong></p>
-                        <img class="case-study-screenshot" src="images/clients/https___newhawcommunitycentre.co.uk_.png" alt="New Haw Community Centre homepage - before">
+                        <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/https___newhawcommunitycentre.co.uk_.png" alt="New Haw Community Centre homepage - before">
                     </div>
                     <div class="col-6">
                         <p><strong><em>After</em></strong></p>
-                        <img class="case-study-screenshot" src="images/clients/newhawcommunitycentre.co.uk_.png" alt="New Haw Community Centre homepage - after">
+                        <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/newhawcommunitycentre.co.uk_.png" alt="New Haw Community Centre homepage - after">
                     </div>
                 </div>
                 <h2>An Easier Way to Book Facilities</h2>
                 <p>To fix the booking system, we set up the LemonBooking app and connected the Book Now button to it, so users can now easily find an available date and time to book the required facilities without having to send emails back and forth to the Bookings team.</p>
-                <img class="case-study-screenshot" src="images/clients/new-haw.lemonbooking.com_embed-url_calendar.png" alt="LemonBooking embedded calendar">
+                <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/new-haw.lemonbooking.com_embed-url_calendar.png" alt="LemonBooking embedded calendar">
                 <h2>The Result</h2>
                 <p>The Community Centre now enjoys a website with a fresh, modern design and a user-friendly booking system.</p>
                 <div class="padding-btn">
